[package]
name = "audiocheckr"
version = "0.2.0"
edition = "2021"
description = "Detect fake lossless files, transcodes, and upsampled audio with advanced spectral analysis"
license = "AGPL-3.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
symphonia = { version = "0.5", features = ["all"] }
rustfft = "6.0"
image = "0.24"
imageproc = "0.23"
rusttype = "0.9"
walkdir = "2.3"
colorful = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"  # For parallel processing

[dependencies.spectrum-analyzer]
version = "1.5"

[dev-dependencies]
serde_json = "1.0"  # For integration tests

[features]
default = []
integration_lib_tests = []  # Enable library integration tests

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[[test]]
name = "qualification_test"
path = "tests/qualification_test.rs"

[[test]]
name = "regression_test"
path = "tests/regression_test.rs"

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"