[package]
name = "audiocheckr"
version = "0.3.3"
edition = "2021"
description = "Detect fake lossless files, transcodes, and upsampled audio with advanced spectral analysis"
license = "AGPL-3.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
symphonia = { version = "0.5", features = ["all"] }
rustfft = "6.0"
image = "0.24"
imageproc = "0.23"
rusttype = "0.9"
walkdir = "2.3"
colorful = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"

[dependencies.spectrum-analyzer]
version = "1.5"

[dev-dependencies]
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }

[features]
default = []
integration_lib_tests = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
