[package]
name = "audiocheckr"
version = "0.3.7"
edition = "2021"
authors = ["Ashwin"]
description = "Advanced audio quality analysis tool for detecting fake lossless files"
license = "GPL-3.0"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
hound = "3.5"
symphonia = { version = "0.5", features = ["all"] }
rustfft = "6.1"
num-complex = "0.4"
rayon = "1.8"
indicatif = { version = "0.17", features = ["rayon"] }
colorful = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
dirs = "5.0"
rubato = "0.15"
realfft = "3.3"
uuid = { version = "1.0", features = ["v4"] }

[features]
default = []
simd = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[[bin]]
name = "audiocheckr"
path = "src/main.rs"
